--- a/css/style.css
+++ b/css/style.css
@@ -144,6 +144,7 @@ address {
   width: 400px;
   height: 400px;
   border-bottom-left-radius: 50%;
+  padding-right: 10px;
 }
 .kwarimg{
   width: 150px;
